# agent_experiments

./: .gitignore  README.md
agent2/: agent2.py
mcp/mcp-client/: .mcp.json  ANALYZE-VERSUS-FAST-AGENT.md  COMPARE-WITH-FAST-AGENT.md  DIAGRAMS-client-g7.py.md  DIRECTION-01-gemini.md  DIRECTION-02-claude.md  DIRECTION-03-gemini.md  ELIXIR-HERMES-JIDO_code.md  ELIXIR-HERMES-LANGCHAIN-JIDO_code.md  ELIXIR-HERMES-babble.md  ELIXIR-JIDO-JIDOAI_code.md  ELIXIR-jido-hermes-diags.md  ELIXIR-jido-supervisors.md  FAST-AGENT-ADAPTER.md  FAST-AGENT-README.md  FAST-AGENT-SOFTWARE-DESIGN.md  FAST-ELIXIR.md  FULL-BEAM-REBUILD.md  FULLSYSTEM.md  MINIMAL-ELIXIR-DB.md  MINIMAL-ELIXIR-PORT.md  MINIMAL-ELIXIR-PORT_code-grok.md  MINIMAL-ELIXIR-PORT_code.md  MINIMAL-ELIXIR.md  README.md  VISUAL-2-FAST.md  VISUAL-CLAUDE-FAST.md  VISUAL-FAST.md  app_logger.py  cli.py  client-g.py  client-g2.py  client-g3.py  client-g5.py  client-g7.py  client.py  config.py  engine.py  mcp_servers.json  md  (+3 more)
mcp/mcp-client/client1/: app_logger.py  cli.py  engine.py
mcp/mcp-client/orig_mockup/: DIAGRAMS-client-g7.py.md  README-client-g6.md  client-g4.py  client-g6.py
